--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: generic
 ---
 
 {% include header.html %}
+{% include welcome.html %}
 {% include speakers.html %}
 {% include social.html %}
 {% include sponsors.html %}
